--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">App ToDo</string>
+    <string name="app_name">Tasky</string>
     <string name="add_task">add task</string>
     <string name="add">add</string>
     <string name="recycklerview">Mis Tareas</string>
