--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Tasky</string>
     <string name="add_task">add task</string>
     <string name="add">add</string>
-    <string name="recycklerview">Mis Tareas</string>
+    <string name="recycklerview">Todas las tareas</string>
     <string name="nueva_tarea_txt">Añade una nueva tarea</string>
 </resources>
